--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev":"node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "pm2 start app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "env": "^0.0.2",
     "express": "^4.21.0",
+    "pm2": "^5.4.2",
     "prisma-client": "^0.0.0"
   },
   "devDependencies": {
