--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev":"node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "start app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
