--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "prisma generate",
+    "dev": "node --watch app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.12",
     "@prisma/client": "^5.21.0",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "env": "^0.0.2",
     "express": "^4.21.0",
@@ -19,6 +23,6 @@
     "prisma-client": "^0.0.0"
   },
   "devDependencies": {
-    "prisma": "^5.21.0"
+    "prisma": "^5.22.0"
   }
 }
