--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-react": "^5.16.0",
     "@clerk/express": "^1.3.12",
     "@prisma/client": "^5.21.0",
     "body-parser": "^1.20.3",
